--- a/templates/ui.html
+++ b/templates/ui.html
@@ -6,31 +6,45 @@
 
     <!-- Calculator Display Screen -->
     <div class="calc-screen">
-        <div id="calc-operation">1234 + 567 + </div>
-        <div id="calc-typed">890</div>
+        <div id="calc-operation">
+            {% if wholeOp == "": %}
+                <div>0</div>
+        {% else: %}
+            {{ wholeOp }}
+        {% endif %}
+        </div>
+        <div id="calc-typed">
+            {% if typed == "": %}
+                <div>0</div>
+            {% else: %}
+                {{ typed }}
+            {% endif %}
+        </div>
     </div>
     
     <!-- Calculator Buttons -->
-    <div class="calc-button-row">
-        <button class="ac">AC</button>
-        <button class="opt">&#43;&#47;&#8722;</button>
-        <button class="opt">&#37;</button>
-        <button class="opt">&#247;</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="opt">&#215;</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="opt">&#8722;</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="opt">&#43;</button>
-        <button>0</button>
-        <button>.</button>
-        <button>&#9003;</button>
-        <button class="opt">&#61;</button>
-    </div>
-    </div>
+    <form method="post">
+        <div class="calc-button-row">
+            <button type="submit" name="button" class="ac" value="AC">AC</button>
+            <button type="submit" name="button" class="opt" value="negate">&#43;&#47;&#8722;</button>
+            <button type="submit" name="button" class="opt" value="mod">&#37;</button>
+            <button type="submit" name="button" class="opt" value="div">&#247;</button>
+            <button type="submit" name="button" value="7">7</button>
+            <button type="submit" name="button" value="8">8</button>
+            <button type="submit" name="button" value="9">9</button>
+            <button type="submit" name="button" class="opt" value="mul">&#215;</button>
+            <button type="submit" name="button" value="4">4</button>
+            <button type="submit" name="button" value="5">5</button>
+            <button type="submit" name="button" value="6">6</button>
+            <button type="submit" name="button" class="opt" value="sub">&#8722;</button>
+            <button type="submit" name="button" value="1">1</button>
+            <button type="submit" name="button" value="2">2</button>
+            <button type="submit" name="button" value="3">3</button>
+            <button type="submit" name="button" class="opt" value="add">&#43;</button>
+            <button type="submit" name="button" value="0">0</button>
+            <button type="submit" name="button" value=".">.</button>
+            <button type="submit" name="button" value="back">&#9003;</button>
+            <button type="submit" name="button" class="opt" value="equ">&#61;</button>
+        </div>
+    </form>
+</div>
