--- a/static/calcUI.css
+++ b/static/calcUI.css
@@ -2,7 +2,7 @@
 .calc-body {
     width: 275px;
     margin: auto;
-    min-height: 400px;
+    min-height: 500px; /*originally 400*/
     box-shadow: 0 8px 50px -7px black;
     background: #3A4655;
 }
@@ -10,11 +10,17 @@
 .calc-screen {
     padding: 1rem;
 }
+#calc-history {
+    font-size: 1.3rem;
+    text-align: right;
+    color: #727B86;
+    padding-bottom: .7rem;
+}
 #calc-operation {
     font-size: 1.3rem;
     text-align: right;
     color: #727B86;
-    padding-bottom: .5rem;
+    padding-bottom: .7rem;
 }
 #calc-typed {
     font-size: 2rem;
@@ -30,7 +36,7 @@
     width: 25%;
     background: #425062;
     color: #fff;
-    height: 65px;
+    height: 65px; /*originally 65*/
     font-size: 1.3rem;
     border: none;
     border-color:#3C4857;
