--- a/templates/ui.html
+++ b/templates/ui.html
@@ -39,7 +39,7 @@
         <div class="calc-button-row">
             <button type="submit" name="button" class="ac" value="AC">AC</button>
             <button type="submit" name="button" class="opt" value="negate">&#43;&#47;&#8722;</button>
-            <button type="submit" name="button" class="opt" value="mod">&#37;</button>
+            <button type="submit" name="button" class="opt" value="CH">&#37;</button>
             <button type="submit" name="button" class="opt" value="div">&#247;</button>
             <button type="submit" name="button" value="7">7</button>
             <button type="submit" name="button" value="8">8</button>
