--- a/templates/ui.html
+++ b/templates/ui.html
@@ -1,5 +1,6 @@
 <!-- Calculator Body -->
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type = "text/css" href = "static/calcUI.css">
 </head>
 <div class="calc-body">
